--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,9 @@ apply plugin: 'kotlin'
 
 repositories {
     mavenCentral()
+    maven{url 'https://jitpack.io'}
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-    // https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-stable
-    compile group: 'nz.ac.waikato.cms.weka', name: 'weka-stable', version: '3.8.0'
 }
