--- a/build.gradle
+++ b/build.gradle
@@ -21,4 +21,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile fileTree(dir: 'libs', include: '*.jar')
+    compile group: 'com.twitter.common', name: 'stats-util', version: '0.0.60'
+    compile 'com.github.sanity:quickml:10.16'
 }
