--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile fileTree(dir: 'libs', include: '*.jar')
     compile group: 'com.twitter.common', name: 'stats-util', version: '0.0.60'
+    compile group: 'nz.ac.waikato.cms.weka', name: 'weka-stable', version: '3.8.0'
     compile 'com.github.sanity:quickml:10.16'
     compile group: 'nz.ac.waikato.cms.weka', name: 'weka-stable', version: '3.6.6'//
     compile group: 'org.deeplearning4j', name: 'deeplearning4j-core', version: '0.8.0'
